Fixing z-index of top bar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -27,6 +27,7 @@ $accent-color: rgb(38, 148, 148);
   padding-bottom: 4px;
   background-color: $background-color;
   border: 0px;
+  z-index: 289;
 }
 
 .page-content {
@@ -361,7 +362,6 @@ a.showcase {
   animation-direction: alternate;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
-  z-index: -1;
 }
 
 .home.header {
